<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan_qr_code"
            android:icon="@drawable/ic_scan"
            android:title="@string/scan_qr_code_menu" />
        <item
            android:id="@+id/nav_prof_wifi"
            android:icon="@drawable/ic_wifi"
            android:title="@string/proximity_name" />
        <item
            android:id="@+id/nav_attendees_list"
            android:icon="@drawable/ic_list"
            android:title="@string/attendees_list_menu" />
        <item
            android:id="@+id/nav_stop_session"
            android:icon="@drawable/ic_exit"
            android:title="@string/stop_session" />
    </group>
</menu>