...
    <string name="sign_up">sign up</string>
    <string name="password_hint">password</string>
    <string name="your_classes">Your classes:</string>
    <string name="updating">Updating…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="double_back">Please click BACK again to exit</string>
    <string name="start_advertising">become visible</string>
    <string name="stop_advertising">stop being visible</string>

    <string name="empty_subject_name_error">Please, fill in the subject name!</string>
    <string name="go_to_existing_session">go to existing session</string>
...
    <string name="register_question">Non existent email! Do you want to register with this email?</string>
    <string name="session_has_been_saved_locally">Session has been saved locally</string>
    <string name="you_can_t_open_a_clone_of_the_app">You can\'t open a clone of the app!</string>
    <string name="wrong_password">wrong password</string>
    <string name="no_permissions">Cannot make connection because permissions are not granted!</string>
    <string name="can_t_get_token">can\'t get token</string>
    <string name="add">Add</string>

</resources>
