<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/page_start_session"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/start_session" />

</menu>