...
                    android:layout_marginVertical="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/subject_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subject_name"
                        android:inputType="text"
                        android:paddingHorizontal="10dp" />

...
                    android:id="@+id/spinner"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/start_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    tools:visibility="visible" />

<!--                    android:background="@drawable/round_button"-->
...
