...
        android:text="placeholder"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/server_address_text"
        tools:text="placeholder" />

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="26sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
...
